--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "chalk": "^4.1.2",
+    "html5-qrcode": "^2.3.4",
     "lax.js": "^2.0.3"
   }
 }
